--- a/cv-portfolio/css/styles.css
+++ b/cv-portfolio/css/styles.css
@@ -117,12 +117,11 @@ header .info .icon{ float: left; font-size: 30px; }
 
 header .info .right-area{ margin-left: 45px; }
 
-header .downlad-btn{ padding: 15px 30px; border-radius: 4px; float: right; margin-top: 30px;
+header .downlad-btn-english{ padding: 15px 30px; border-radius: 4px; float: right; margin-top: 30px;
 	box-shadow: inset 0 0px 4px rgba(0,0,0,.3); background: #FFAD01; color: #fff; 
 	-webkit-transition: all .2s ease; transition: all .2s ease; }
 
-header .downlad-btn:hover{ -webkit-transform: translateY(-4px); transform: translateY(-4px); }
-
+header .downlad-btn-english:hover{ -webkit-transform: translateY(-4px); transform: translateY(-4px); }
 
 /* ---------------------------------
 4. INTRO SECTION
